--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <nav class="navigation">
       <a class="logo" href="./index.html">Web<span class="studio-black">Studio</span></a>
       <ul class="header-list list">
-        <li class="header-item"><a class="" href="./index.html">Студия</a></li>
-        <li class="header-item"><a class="" href="./index.html">Портфолио</a></li>
-        <li class="header-item"><a class="" href="./index.html">Контакты</a></li>
+        <li class="header-item"><a class="header-link link" href="./index.html">Студия</a></li>
+        <li class="header-item"><a class="header-link" href="./index.html">Портфолио</a></li>
+        <li class="header-item"><a class="header-link" href="./index.html">Контакты</a></li>
       </ul>
     </nav>
     <!-- Шапка-контакты -->
-    <ul class="contacts list lit">
-      <li class="contacts-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li class="contacts-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="contacts-list lit">
+      <li class="contacts-item"><a class="contacts-link link"href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="contacts-item"><a class="contacts-link link"href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header>
   <main>
@@ -103,16 +103,16 @@
     </section>
   </main>
   <!-- Футер -->
-  <footer>
-    <a href="./index.html">Web<span>Studio</span></a>
+  <footer class="footer">
+    <a class="logo" href="./index.html">Web<span class="studio-white">Studio</span></a>
     <address>
-      <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
+      <a class="footer-city-link link" href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
         target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
     </address>
-    <address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+1112223344"></a>(111) 222 33 44
-    </address>
+    <li>
+      <a class="footer-link link" href="mailto:info@example.com">info@example.com</a>
+      <a class="footer-link link" href="tel:+1112223344">(111) 222 33 44</a>
+    </li>
   </footer>
 </body>
 
